# proc_histopathology_image

./: CMakeLists.txt  README.md
data/: files.txt  sample_distribution.txt
include/: boost_app_fs.h  create_file_list.h  create_nidus_mask.h  crop_valid_area.h  select_train_sample.h
python/create_fcn_data/: colormap.py  create_fcn_data.py
python/create_fcn_data/data/: fcn_train_info.txt  files_train.txt
python/preprocess/: rotate_and_flip.py
python/training/: draw_training_info.py  proc_info.py
python/training_fcn/: draw_training.py  proc_log.py
src/: boost_app_fs.cpp  create_file_list.cpp  create_nidus_mask.cpp  crop_valid_area.cpp  main.cpp  select_train_sample.cpp
src_python/: create_images_list.py
